--- a/Job_Portal/Pages/Shared/_Layout.cshtml
+++ b/Job_Portal/Pages/Shared/_Layout.cshtml
@@ -7,22 +7,21 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/modal.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/transitions.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Job_Portal.styles.css" asp-append-version="true" />
 </head>
 <body>  
-  
     <div class="container">
-      
         <partial name="_NavBar" />
-        <main role="main" class="pb-3">
+        <main role="main" class="pb-3 page-transition">
             @RenderBody()
         </main>
     </div>
 
-
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/transitions.js" asp-append-version="true"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
